--- a/7-其他/二分答案.md
+++ b/7-其他/二分答案.md
@@ -1,27 +1,17 @@
 ## 二分答案
  - require: C++11
  - [x] 封装
- - [ ] 测试
+ - [x] 测试
 
-对给定函数的 `y`，二分查找 `x`
+基于函数的二分查找。对给定函数的 `y`，二分查找 `x`
 
 ### 离散  <!-- omit in toc -->
 
 ```cpp
-#include <bits/stdc++.h>
-using namespace std;
-
-template <typename T> bool dec(T _a, T _b) { return greater<T>()(_a, _b); }
-template <typename T> bool inc(T _a, T _b) { return less<T>()(_a, _b); }
-// template <typename T> bool incid(T _a, T _b) {
-//     return less<T>()(a[_a].id, a[_b].id);
-// }
-
-int a[10] = {7, 5, 5, 5, 3, 3, 3, 1, 1, 1};
-
-template <typename Tx = int, typename Ty = int>
-Tx upperbound(Ty(getval)(Tx), Tx first, Tx last, const Ty &val,
-              bool(comp)(Ty, Ty) = inc<Ty>) {
+template <typename Tx, typename Ty, typename Fn,
+          typename Comp = decltype(less<Ty>())>
+Tx upperbound(Fn getval, Tx first, Tx last, const Ty &val,
+              Comp comp = less<Ty>()) {
     Tx len = last - first;
     while (len > 0) {
         Tx half = len >> 1;
@@ -36,9 +26,10 @@ Tx upperbound(Ty(getval)(Tx), Tx first, Tx last, const Ty &val,
     return first;
 }
 
-template <typename Tx = int, typename Ty = int>
-Tx lowerbound(Ty(getval)(Tx), Tx first, Tx last, const Ty &val,
-              bool(comp)(Ty, Ty) = inc<Ty>) {
+template <typename Tx, typename Ty, typename Fn,
+          typename Comp = decltype(less<Ty>())>
+Tx lowerbound(Fn getval, Tx first, Tx last, const Ty &val,
+              Comp comp = less<Ty>()) {
     Tx len = last - first;
     while (len > 0) {
         Tx half = len >> 1;
@@ -52,7 +43,9 @@ Tx lowerbound(Ty(getval)(Tx), Tx first, Tx last, const Ty &val,
     return first;
 }
 
-int geta(int i) { return a[i]; }
-
-int main() { cout << upperbound(geta, 0, 10, 1, dec<int>); }
+// demo
+int main() {
+    vector<int> a = {7, 5, 5, 5, 3, 3, 3, 1, 1, 1};
+    cout << upperbound([&](int i) { return a[i]; }, 0, 10, 1, greater<int>());
+}
 ```
