--- a/3-数据结构/并查集.md
+++ b/3-数据结构/并查集.md
@@ -3,25 +3,23 @@
  - [x] 封装
  - [x] 测试
 
-
+### 路径压缩
 ```cpp
-using namespace std;
+struct UnionFindSet {
+    vector<ll> f;
+    ll n;
 
-class UnionFindSet {
-  public:
-    int f[150001];
-    int n;
-    void clear() {
-        for (int i = 0; i < n; i++)
+    UnionFindSet(ll n) : f(n) { clear(n); }
+    void clear(ll n) {
+        this->n = n;
+        for (ll i = 0; i < n; i++)
             f[i] = i;
     }
-    int find(int x) {
+    ll find(ll x) {
         if (f[x] != x)
             f[x] = find(f[x]);
         return f[x];
     }
-    void Union(int x, int y) {
-        f[find(x)] = find(y);
-    }
-} animal;
+    void Union(ll x, ll y) { f[find(x)] = find(y); }
+};
 ```
