Add English title & Optimize

--- a/2-数学/快速幂.md
+++ b/2-数学/快速幂.md
@@ -1,4 +1,4 @@
-## 快速幂
+## 快速幂 qpow
  - require: c++98
  - [x] 封装
  - [ ] 测试
@@ -6,7 +6,7 @@
 ```cpp
 ll qpow(ll a, ll b, ll mod = mod) {
     ll res = 1;
-    a = a % mod;
+    a %= mod;
     while (b) {
         if (b & 1)
             res = res * a % mod;
