Add new content

--- a/7-其他/二分答案.md
+++ b/7-其他/二分答案.md
@@ -3,9 +3,9 @@
  - [x] 封装
  - [x] 测试
 
-基于函数的二分查找。对给定函数的 `y`，二分查找 `x`
+对函数的二分查找。对单调函数 `getval(x)`，在 `[first, last)` 范围查找 `x` 的所在位置。
 
-### 离散  <!-- omit in toc -->
+### `x` 离散  <!-- omit in toc -->
 
 ```cpp
 template <typename Tx, typename Ty, typename Fn,
@@ -47,5 +47,26 @@ Tx lowerbound(Fn getval, Tx first, Tx last, const Ty &val,
 int main() {
     vector<int> a = {7, 5, 5, 5, 3, 3, 3, 1, 1, 1};
     cout << upperbound([&](int i) { return a[i]; }, 0, 10, 1, greater<int>());
+}
+```
+
+### `x` 连续
+
+```cpp
+template <typename Tx, typename Ty, typename Fn,
+          typename Comp = decltype(less<Ty>())>
+Tx lowerbound(Fn getval, Tx first, Tx last, const Ty &val,
+              Comp comp = less<Ty>()) {
+    Tx len = last - first;
+    for (int i = 0; i < 30; i++) {
+        Tx half = len / 2;
+        Tx middle = first + half;
+        if (comp(getval(middle), val)) {
+            first = middle;
+            len = len - half;
+        } else
+            len = half;
+    }
+    return first;
 }
 ```
