--- a/7-其他/博弈论.md
+++ b/7-其他/博弈论.md
@@ -33,3 +33,13 @@ int Nim(vector<int> v) {
     return res;
 }
 ```
+
+### Sprague-Grundy Theory
+
+### Fibonacci Game
+
+有一堆物品，每堆有 `v[i]` 个物品，双方轮流从中取物品，每一次从一堆物品中取 `[1, v[i]]` 个，取到最后一件物品的人获胜。
+
+### K 倍动态减法
+
+### NimK
