--- a/4-图论/网络流/最小费用最大流.md
+++ b/4-图论/网络流/最小费用最大流.md
@@ -191,3 +191,100 @@ int main() {
     cout << mcmf.flow << " " << mcmf.ans;
 }
 ```
+
+#### zzq (c++98)
+```cpp
+const int MAXN = 10001;
+const int MAXM = 100001;
+const int INF = 0x7fffffff;
+
+/* MCMF_zzq
+ *
+ * 调用：
+ *     init(n) 初始化
+ *     add_edge(u, v, cap, cost) 建图
+ *     solve(s, t) 计算答案
+ *     ans - 费用， flow - 流量
+ */
+
+struct MCMF {
+    int N, M, S, T;
+    int flow, ans, sum;
+
+    v(int) G[MAXN];
+    int dist[MAXN], cap[MAXM], cost[MAXM], to[MAXM];
+    bool aug[MAXN];
+
+    void _add_edge(int a, int b, int c, int d) {
+        G[a].push_back(++M), to[M] = b, cap[M] = c, cost[M] = d;
+    }
+
+    // u, v, capacity, cost
+    void add_edge(int a, int b, int c, int d) {
+        _add_edge(a, b, c, d), _add_edge(b, a, 0, -d);
+    }
+
+    int dfs(int u, int lim) {
+        if (!lim)
+            return 0;
+        if (u == T)
+            return ans += lim * sum, lim;
+        int f = 0, v;
+        aug[u] = true;
+        for (int i = 0; i < sz(G[u]); i++) {
+            int e = G[u][i];
+            if (!cost[e] && cap[e] && !aug[v = to[e]]) {
+                int t = dfs(v, std::min(lim - f, cap[e]));
+                cap[e] -= t, cap[e ^ 1] += t, f += t;
+                if (f == lim)
+                    break;
+            }
+        }
+        if (f == lim)
+            aug[u] = false;
+        return f;
+    }
+
+    bool augment() {
+        std::priority_queue<pii, std::vector<pii>, std::greater<pii> > q;
+        std::fill(dist, dist + N + 1, INF);
+        q.push({dist[T] = 0, T});
+        while (!q.empty()) {
+            pii x = q.top();
+            q.pop();
+            if (dist[x.second] != x.first)
+                continue;
+            int &u = x.second, dt, v;
+            for (int i = 0; i < sz(G[u]); i++) {
+                int e = G[u][i];
+                if (cap[e ^ 1] && (dt = dist[u] - cost[e]) < dist[v = to[e]])
+                    q.push({dist[v] = dt, v});
+            }
+        }
+        sum += dist[S];
+        for (int i = 0; i <= N; ++i)
+            for (int j = 0; j < sz(G[i]); j++) {
+                int e = G[i][j];
+                cost[e] += dist[to[e]] - dist[i];
+            }
+        return dist[S] != INF;
+    }
+
+    void init(int n) {
+        N = n, M = 1;
+        for (int i = 0; i <= n; ++i)
+            G[i].clear();
+    }
+
+    void solve(int _s, int _t) {
+        int res;
+        S = _s, T = _t;
+        flow = ans = sum = 0;
+        do
+            do
+                std::fill(aug, aug + N + 1, 0);
+            while (flow += (res = dfs(S, INF)), res > 0);
+        while (augment());
+    }
+} mcmf;
+```
