--- a/3-数据结构/线段树.md
+++ b/3-数据结构/线段树.md
@@ -6,7 +6,7 @@
 #include <bits/stdc++.h>
 
 struct node_t {
-    int lo, hi, add_tag, max_val, min_val;
+    int lo, hi, add_tag = 0, max_val = 0, min_val = 0;
 
     void add(int tag) {
         add_tag += tag;
@@ -36,31 +36,22 @@ struct seg_t {
             k = k + k;
         int m = n + n - k, s = k - n;
         for (int i = 0; i < m; i++)
-            seg[i + k] = {i, i + 1, 0, 0, 0};
+            seg[i + k] = {i, i + 1};
         for (int i = m; i < n; i++)
-            seg[i + s] = {i, i + 1, 0, 0, 0};
+            seg[i + s] = {i, i + 1};
         for (int i = n - 1; i; i--)
-            seg[i] = {seg[i + i].lo, seg[i + i + 1].hi, 0, 0, 0};
-    }
-    template <class Fun> void update(int l, int r, Fun &&fun, int i = 1) {
-        if (r <= seg[i].lo || seg[i].hi <= l)
-            return;
-        if (l <= seg[i].lo && seg[i].hi <= r)
-            return fun(seg[i]);
-        seg[i].pushdown(seg[i + i], seg[i + i + 1]);
-        update(l, r, fun, i + i + 0);
-        update(l, r, fun, i + i + 1);
-        seg[i].maintain(seg[i + i], seg[i + i + 1]);
+            seg[i] = {seg[i + i].lo, seg[i + i + 1].hi};
     }
 
-    template <class Fun> void query(int l, int r, Fun &&fun, int i = 1) {
+    template <class Fun> void run(int l, int r, Fun &&fun, int i = 1) {
         if (r <= seg[i].lo || seg[i].hi <= l)
             return;
         if (l <= seg[i].lo && seg[i].hi <= r)
             return fun(seg[i]);
         seg[i].pushdown(seg[i + i], seg[i + i + 1]);
-        query(l, r, fun, i + i + 0);
-        query(l, r, fun, i + i + 1);
+        run(l, r, fun, i + i + 0);
+        run(l, r, fun, i + i + 1);
+        seg[i].maintain(seg[i + i], seg[i + i + 1]);
     }
 
     node_t &top() { return seg[1]; }
@@ -81,21 +72,21 @@ int main() {
         if (s[i] != 'R' && s[i] != 'L') {
             if (t[p] == '(') {
                 lst--;
-                seg.update(p, n, [](node_t &node) { node.add(-1); });
+                seg.run(p, n, [](node_t &node) { node.add(-1); });
             } else if (t[p] == ')') {
                 lst++;
-                seg.update(p, n, [](node_t &node) { node.add(1); });
+                seg.run(p, n, [](node_t &node) { node.add(1); });
             }
         }
 
         if (s[i] == '(') {
             lst++;
             t[p] = '(';
-            seg.update(p, n, [](node_t &node) { node.add(1); });
+            seg.run(p, n, [](node_t &node) { node.add(1); });
         } else if (s[i] == ')') {
             lst--;
             t[p] = ')';
-            seg.update(p, n, [](node_t &node) { node.add(-1); });
+            seg.run(p, n, [](node_t &node) { node.add(-1); });
         } else if (s[i] == 'L') {
             p--;
             if (p < 0)
