--- a/3-数据结构/树.md
+++ b/3-数据结构/树.md
@@ -14,7 +14,9 @@ struct t_node {
 // demo
 int main() {
     vector<t_node> V(n + 1);
+    
     vector<int> vis(n + 1);
+    int timestamp;
     function<void(int, int, int)> dfs;
     dfs = [&](int u, int depth, int parent) {
         V[u].d = depth;
@@ -26,7 +28,7 @@ int main() {
                 dfs(v, depth + 1, u);
         V[u].tout = ++timestamp;
     };
-    int timestamp = 0;
+    timestamp = 0;
     dfs(1, 0, 0);
 }
 ```
