--- a/3-数据结构/线段树.md
+++ b/3-数据结构/线段树.md
@@ -54,6 +54,21 @@ struct seg_t {
         seg[i].maintain(seg[i + i], seg[i + i + 1]);
     }
 
+    int query_max(int l, int r) {
+        node_t res;
+        res.max_val = -INF;
+        run(l, r, [&](node_t &node) { res.maintain(res, node); });
+        return res.max_val;
+    }
+
+    void add(int i, int val) {
+        run(i, i + 1, [&](node_t &node) { node.add(val); });
+    }
+
+    void modify(int i, int val) {
+        run(i, i + 1, [&](node_t &node) { node.add(val - query(i, i + 1)); });
+    }
+
     node_t &top() { return seg[1]; }
 };
 
