--- a/7-其他/二分答案.md
+++ b/7-其他/二分答案.md
@@ -8,65 +8,68 @@
 ### `x` 离散  <!-- omit in toc -->
 
 ```cpp
-template <typename Tx, typename Ty, typename Fn,
-          typename Comp = decltype(less<Ty>())>
-Tx upperbound(Fn getval, Tx first, Tx last, const Ty &val,
-              Comp comp = less<Ty>()) {
-    Tx len = last - first;
-    while (len > 0) {
-        Tx half = len >> 1;
-        Tx middle = first + half;
-        if (comp(val, getval(middle)))
-            len = half;
-        else {
-            first = middle + 1;
-            len = len - half - 1;
-        }
-    }
-    return first;
-}
+namespace penalg {
 
-template <typename Tx, typename Ty, typename Fn,
-          typename Comp = decltype(less<Ty>())>
-Tx lowerbound(Fn getval, Tx first, Tx last, const Ty &val,
-              Comp comp = less<Ty>()) {
-    Tx len = last - first;
+template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
+Tx lower_bound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
+    Tx len = r - l;
     while (len > 0) {
         Tx half = len >> 1;
-        Tx middle = first + half;
-        if (comp(getval(middle), val)) {
-            first = middle + 1;
+        Tx mid = l + half;
+        if (comp(f(mid), val)) {
+            l = mid + 1;
             len = len - half - 1;
         } else
             len = half;
     }
-    return first;
+    return l;
 }
+
+template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
+Tx upper_bound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
+    Tx len = r - l;
+    while (len > 0) {
+        Tx half = len >> 1;
+        Tx mid = l + half;
+        if (comp(val, f(mid)))
+            len = half;
+        else {
+            l = mid + 1;
+            len = len - half - 1;
+        }
+    }
+    return l;
+}
+
+} // namespace penalg
 
 // demo
 int main() {
     vector<int> a = {7, 5, 5, 5, 3, 3, 3, 1, 1, 1};
-    cout << upperbound([&](int i) { return a[i]; }, 0, 10, 1, greater<int>());
+    cout << penalg::upper_bound(
+        0, 10, [&](int i) { return a[i]; }, 1, greater<int>());
 }
 ```
 
 ### `x` 连续
 
 ```cpp
-template <typename Tx, typename Ty, typename Fn,
-          typename Comp = decltype(less<Ty>())>
-Tx lowerbound(Fn getval, Tx first, Tx last, const Ty &val,
-              Comp comp = less<Ty>()) {
-    Tx len = last - first;
+namespace penalg {
+
+template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
+Tx lowerbound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
+    Tx len = r - l;
     for (int i = 0; i < 30; i++) {
         Tx half = len / 2;
-        Tx middle = first + half;
-        if (comp(getval(middle), val)) {
-            first = middle;
+        Tx mid = l + half;
+        if (comp(f(mid), val)) {
+            l = mid;
             len = len - half;
         } else
             len = half;
     }
-    return first;
+    return l;
 }
+
+} // namespace penalg
 ```
