--- a/2-数学/快速幂 & 快速乘.md
+++ b/2-数学/快速幂 & 快速乘.md
@@ -15,4 +15,16 @@ ll qpow(ll a, ll b, ll mod = mod) {
     }
     return res;
 }
+
+ll qmul(ll a, ll b, ll mod = mod) {
+    ll res = 0;
+    a %= mod;
+    while (b) {
+        if (b & 1)
+            res = (res + a) % mod;
+        a = (a + a) % mod;
+        b >>= 1;
+    }
+    return res;
+}
 ```
