Update qpow & pengeo

--- a/2-数学/快速幂 & 快速乘.md
+++ b/2-数学/快速幂 & 快速乘.md
@@ -16,6 +16,16 @@ ll qpow(ll a, ll b, ll mod = mod) {
     return res;
 }
 
+ll qpow(ll a, ll b, ll mod = mod) {
+    if (!b) 
+        return 1;
+    ll ns = qpow(a, b >> 1);
+    ns = ns * ns % mod;
+    if (b & 1) 
+        ns = ns * a % mod;
+    return ns;
+}
+
 ll qmul(ll a, ll b, ll mod = mod) {
     ll res = 0;
     a %= mod;
@@ -27,4 +37,15 @@ ll qmul(ll a, ll b, ll mod = mod) {
     }
     return res;
 }
+
+ll qmul(ll a, ll b, ll mod = mod) {
+    if (!b) 
+        return 0;
+    ll ns = qmul(a, b >> 1);
+    ns = (ns + ns) % mod;
+    if (b & 1) 
+        ns = (ns + a) % mod;
+    return ns;
+}
+
 ```
