--- a/2-数学/阶乘的逆元.md
+++ b/2-数学/阶乘的逆元.md
@@ -2,7 +2,7 @@
 
 ### 朴素实时
 ```cpp
-// inv()
+// inv();
 int invfac(int n, int mod = mod) {
     return inv(fac(n), mod);
 }
@@ -10,7 +10,7 @@ int invfac(int n, int mod = mod) {
 
 ### 打表
 ```cpp
-// int inv()
+// int inv();
 ll _invfac[1000000];
 void make_invfac(int n, int mod = mod) {
     _invfac[0] = 1;
