--- a/3-数据结构/线段树.md
+++ b/3-数据结构/线段树.md
@@ -1,17 +1,22 @@
 ## 线段树
  - [x] 封装
- - [x] 测试
+ - [ ] 测试
 
 ```cpp
 #include <bits/stdc++.h>
+using namespace std;
+
+const int INF = 1e9;
 
 struct node_t {
-    int lo, hi, add_tag = 0, max_val = 0, min_val = 0;
+    int lo, hi, add_tag = 0, min_val = 0, max_val = 0, sum_val = 0, mex_val = 0;
 
     void add(int tag) {
         add_tag += tag;
-        max_val += tag;
         min_val += tag;
+        max_val += tag;
+        sum_val += tag * (hi - lo);
+        mex_val = sum_val == (hi - lo) ? INF : lo;
     }
 
     void pushdown(node_t &lhs, node_t &rhs) {
@@ -23,8 +28,10 @@ struct node_t {
     }
 
     void maintain(node_t &lhs, node_t &rhs) {
-        min_val = std::min(lhs.min_val, rhs.min_val);
-        max_val = std::max(lhs.max_val, rhs.max_val);
+        min_val = min(lhs.min_val, rhs.min_val);
+        max_val = max(lhs.max_val, rhs.max_val);
+        sum_val = lhs.sum_val + rhs.sum_val;
+        mex_val = min(lhs.mex_val, rhs.mex_val);
     }
 };
 
@@ -36,11 +43,11 @@ struct seg_t {
             k = k + k;
         int m = n + n - k, s = k - n;
         for (int i = 0; i < m; i++)
-            seg[i + k] = {i, i + 1};
+            seg[i + k] = {i, i + 1, 0, 0, 0, 0, i};
         for (int i = m; i < n; i++)
-            seg[i + s] = {i, i + 1};
+            seg[i + s] = {i, i + 1, 0, 0, 0, 0, i};
         for (int i = n - 1; i; i--)
-            seg[i] = {seg[i + i].lo, seg[i + i + 1].hi};
+            seg[i] = {seg[i + i].lo, seg[i + i + 1].hi, 0, 0, 0, 0, seg[i + i].lo};
     }
 
     template <class Fun> void run(int l, int r, Fun &&fun, int i = 1) {
@@ -61,12 +68,23 @@ struct seg_t {
         return res.max_val;
     }
 
+    int query_sum(int l, int r) {
+        node_t res;
+        res.sum_val = 0;
+        run(l, r, [&](node_t &node) { res.maintain(res, node); });
+        return res.sum_val;
+    }
+
+    int query_mex(int i = 1) {
+        return seg[i].mex_val;
+    }
+
     void add(int i, int val) {
         run(i, i + 1, [&](node_t &node) { node.add(val); });
     }
 
     void modify(int i, int val) {
-        run(i, i + 1, [&](node_t &node) { node.add(val - query(i, i + 1)); });
+        run(i, i + 1, [&](node_t &node) { node.add(val - query_sum(i, i + 1)); });
     }
 
     node_t &top() { return seg[1]; }
