--- a/2-数学/欧拉函数.md
+++ b/2-数学/欧拉函数.md
@@ -1,16 +1,30 @@
 ## 欧拉函数 Eurler_phi
 
+
+### 单数计算
 ```cpp
-int eurler_phi(int n)
-{
+int eurler_phi(int n) {
     int res = n;
-    for(int i = 2; i * i <= n; i++){
-        if(n % i == 0){
+    for (int i = 2; i * i <= n; i++)
+        if (n % i == 0) {
             res = res / i * (i - 1);
             while (n % i == 0) n /= i;
         }
-    }
-    if(n != 1) res = res / n * (n - 1);
+    if (n != 1) res = res / n * (n - 1);
     return res;
+}
+```
+
+### 筛法
+```c++
+void phi_table(int n) {
+  phi = vector<int>(n + 1);
+  phi[1] = 1;
+  for (int i = 2; i <= n; i++)
+    if (!phi[i])
+      for (int j = i; j <= n; j += i) {
+        if (!phi[j]) phi[j] = j;
+        phi[j] = phi[j] / i * (i - 1);
+      }
 }
 ```
