--- a/2-数学/自适应辛普森积分.md
+++ b/2-数学/自适应辛普森积分.md
@@ -1,4 +1,4 @@
-## 自适应辛普森
+## 自适应辛普森积分
 
 ```cpp
 template <class Fn>
@@ -15,3 +15,4 @@ double adaptive(double L, double R, Fn f, double ans = 0, double eps = EPS)
     return adaptive(L, mid, f, l) + adaptive(mid, R, f, r);
 }
 ```
+
