--- a/7-其他/二分答案.md
+++ b/7-其他/二分答案.md
@@ -5,38 +5,27 @@
 
 对函数的二分查找。对单调函数 `getval(x)`，在 `[first, last)` 范围查找 `x` 的所在位置。
 
-### `x` 离散  <!-- omit in toc -->
+### `x` 离散
 
 ```cpp
 namespace penalg {
 
 template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
 Tx lower_bound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
-    Tx len = r - l;
-    while (len > 0) {
-        Tx half = len >> 1;
-        Tx mid = l + half;
-        if (comp(f(mid), val)) {
-            l = mid + 1;
-            len = len - half - 1;
-        } else
-            len = half;
+    while (r - l > 0) {
+        Tx mid = (l + r) >> 1; // mid = l + half
+        if (comp(f(mid), val)) l = mid + 1;
+        else r = mid; // len = half;
     }
     return l;
 }
 
 template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
 Tx upper_bound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
-    Tx len = r - l;
-    while (len > 0) {
-        Tx half = len >> 1;
-        Tx mid = l + half;
-        if (comp(val, f(mid)))
-            len = half;
-        else {
-            l = mid + 1;
-            len = len - half - 1;
-        }
+    while (r - l > 0) {
+        Tx mid = (l + r) >> 1; // mid = l + half
+        if (comp(val, f(mid))) r = mid; // len = half;
+        else l = mid + 1;
     }
     return l;
 }
@@ -53,23 +42,4 @@ int main() {
 
 ### `x` 连续
 
-```cpp
-namespace penalg {
-
-template <class Tx, class Ty, class Fn, class Comp = decltype(less<Ty>())>
-Tx lowerbound(Tx l, Tx r, Fn f, const Ty &val, Comp comp = less<Ty>()) {
-    Tx len = r - l;
-    for (int i = 0; i < 30; i++) {
-        Tx half = len / 2;
-        Tx mid = l + half;
-        if (comp(f(mid), val)) {
-            l = mid;
-            len = len - half;
-        } else
-            len = half;
-    }
-    return l;
-}
-
-} // namespace penalg
-```
+可使用零点求解器
