--- a/2-数学/阶乘.md
+++ b/2-数学/阶乘.md
@@ -1,7 +1,15 @@
 ## 阶乘 Factorial
 
+### 递归
 
-### 朴素实时
+```c++
+constexpr int fac(int n, int mod) {
+    return n > 0 ? (ll)n * fac(n - 1) % mod : 1;
+}
+```
+
+### 非递归
+
 ```cpp
 int fac(int n, int mod = mod) {
     ll res = 1;
@@ -11,14 +19,38 @@ int fac(int n, int mod = mod) {
 }
 ```
 
-### 打表
+### 打表 O(n) 查询 O(1)
+
 ```cpp
-ll _fac[1000000];
-void make_fac(int n, int mod = mod) {
-    _fac[0] = 1;
-    for (ll i = 1; i <= n; i++)
-        _fac[i] = _fac[i - 1] * i % mod;
+ll _inv[N], _fac[N], _invfac[N];
+void init_inv(int n, int mod = mod) {
+    _inv[1] = 1;
+    for (int i = 2; i <= n; i++) _inv[i] = _inv[mod % i] * (mod - mod / i) % mod;
 }
+void init_fac(int n, int mod = mod) {
+    _fac[0] = _invfac[0] = 1;
+    for (int i = 1; i <= n; i++) _fac[i] = _fac[i - 1] * i % mod, _invfac[i] = _invfac[i - 1] * _inv[i] % mod;
+}
+inline int inv(int n) { return _inv[n]; }
 inline int fac(int n) { return _fac[n]; }
+inline int invfac(int n) { return _invfac[n]; }
 ```
 
+### n! mod p^k
+
+```c++
+// qpow()
+ll fac_pk(ll n, ll p, ll pk)
+//求n!%pi^ci,pk=pi^ci
+{
+	if (!n) return 1;
+	ll ans = 1;
+	for (ll i = 1; i <= pk; i++)
+		if (i % p) ans = ans * i % pk;
+	ans = qpow(ans, n / pk, pk);
+	for (ll i = 2; i <= n % pk; i++) // 暴力求剩下的
+		if (i % p) ans = ans * i % pk;
+	return ans * fac_pk(n / p, p, pk) % pk;
+	//递归下去求解(n/pi)!%pi^ci 
+}
+```
