apply changes on Ubuntu

--- a/3-数据结构/线段树.md
+++ b/3-数据结构/线段树.md
@@ -43,7 +43,7 @@ struct seg_t {
             seg[i] = {seg[i + i].lo, seg[i + i + 1].hi};
     }
 
-    template <class Fun> void run(int l, int r, Fun &&fun, int i = 1) {
+    template <class Fn> void run(int l, int r, Fn &&fun, int i = 1) {
         if (r <= seg[i].lo || seg[i].hi <= l)
             return;
         if (l <= seg[i].lo && seg[i].hi <= r)
@@ -63,6 +63,10 @@ struct seg_t {
 
     void add(int i, int val) {
         run(i, i + 1, [&](node_t &node) { node.add(val); });
+    }
+
+    void add(int l, int r, int val) {
+        run(l, r, [&](node_t &node) { node.add(val); });
     }
 
     void modify(int i, int val) {
