--- a/1-字符串/字符串哈希.md
+++ b/1-字符串/字符串哈希.md
@@ -1,10 +1,13 @@
 ## 字符串哈希
 
+### 一维
+
 `hash(i) = hash(i - 1) * 33 + str[i];`
 
 Another: `hash(i) = hash(i - 1) * 33 ^ str[i]`
 
-### char[]
+#### char[]
+
 ```c++
 unsigned int hash(unsigned char *str) {
     unsigned int hash = 5381;
@@ -14,27 +17,37 @@ unsigned int hash(unsigned char *str) {
     return hash;
 }
 ```
-### string
-```c++
-constexpr unsigned int hash(string &s) {
-    unsigned int hash = 5381;
-    for (char c : s)
-        hash = ((hash << 5) + hash) + c; /* hash * 33 + c */
-    return hash;
-}
 
-struct range_hash {
-    vector<unsigned int> h;
-    constexpr range_hash(string &s) : {
-        int len = s.size(); 
-        h.resize(len + 1);
-        h[0] = 5381;
-        for (int i = 0; i < len; i++)
-            h[i + 1] = ((h[i] << 5) + h[i]) + s[i];
-        for (int i = 0; i < len; i++)
-            pow33
-    }
-    constexpr unsigned int hash(int l = 0, int r = hash.size()) { return h[r] - h[l] * pow33[r - l] }
-        
+### 二维
+
+```c++
+const int N = 2000 + 5;
+
+char p[N][N], a[N][N];
+ull hashp[N][N], hasha[N][N];
+ull pow1[N], pow2[N];
+const ull base1 = 33;
+const ull base2 = 13331;
+
+int main() {
+    pow1[0] = pow2[0] = 1;
+    for (int i = 0; i < N; i++)
+        pow1[i + 1] = pow1[i] * base1, pow2[i + 1] = pow2[i] * base2;
+
+    /* ... */
+
+    for (int i = 0; i < hp; i++)  // hash in row
+        for (int j = 0; j < wp; j++)
+            hasha[i + 1][j + 1] = hasha[i + 1][j] * base1 + a[i][j];
+    for (int i = 0; i < hp; i++)
+        for (int j = 0; j < wp; j++)  // hash in column
+            hasha[i + 1][j + 1] += hasha[i][j + 1] * base2;
+
+    // query (i, j) (h, w)
+    (hasha[i + h][j + w] - hasha[i + h][j] * pow1[w] - hasha[i][j + w] * pow2[h]
+    + hasha[i][j] * pow1[w] * pow2[h])
 }
 ```
+
+
+
