--- a/2-数学/阶乘.md
+++ b/2-数学/阶乘.md
@@ -23,13 +23,13 @@ int fac(int n, int mod = mod) {
 
 ```cpp
 ll _inv[N], _fac[N], _invfac[N];
-void init_inv(int n, int mod = mod) {
+void init_inv(int n = N, int mod = mod) {
     _inv[1] = 1;
-    for (int i = 2; i <= n; i++) _inv[i] = _inv[mod % i] * (mod - mod / i) % mod;
+    for (int i = 2; i < n; i++) _inv[i] = _inv[mod % i] * (mod - mod / i) % mod;
 }
-void init_fac(int n, int mod = mod) {
+void init_fac(int n = N, int mod = mod) {
     _fac[0] = _invfac[0] = 1;
-    for (int i = 1; i <= n; i++) _fac[i] = _fac[i - 1] * i % mod, _invfac[i] = _invfac[i - 1] * _inv[i] % mod;
+    for (int i = 1; i < n; i++) _fac[i] = _fac[i - 1] * i % mod, _invfac[i] = _invfac[i - 1] * _inv[i] % mod;
 }
 inline int inv(int n) { return _inv[n]; }
 inline int fac(int n) { return _fac[n]; }
@@ -40,9 +40,7 @@ inline int invfac(int n) { return _invfac[n]; }
 
 ```c++
 // qpow()
-ll fac_pk(ll n, ll p, ll pk)
-//求n!%pi^ci,pk=pi^ci
-{
+ll fac_pk(ll n, ll p, ll pk) { //求n!%pi^ci,pk=pi^ci
 	if (!n) return 1;
 	ll ans = 1;
 	for (ll i = 1; i <= pk; i++)
