--- a/3-数据结构/树状数组.md
+++ b/3-数据结构/树状数组.md
@@ -1,25 +1,19 @@
 ## 树状数组
 
 ```cpp
-struct bi_t {
-    int bit[maxn];
-    int n;
-    int lowbit(int i) {return i&(-i);}
-    int sum(int i) {
-        int s=0;
-        while (i>0) {
-            s+=bit[i];
-            i-=lowbit(i);
-        }
+template<class T>
+struct bi_t : vector<T> {
+    bi_t(int n) : vector<T>(n + 1) {};
+    int lowbit(int i) { return i & (-i); }
+    T sum(T i) {
+        int s = 0;
+        for (; i > 0; i -= lowbit(i)) s += (*this)[i];
         return s;
     }
-    void add(int i,int x) {
-        while (i<=n) {
-            bit[i]+=x;
-            i+=lowbit(i);
-        }
+    void add(int i, T x) {
+        for (i++; i < (int)this->size(); i += lowbit(i)) (*this)[i] += x;
     }
-}
+};
 ```
 
 ```cpp
