--- a/2-数学/中国剩余定理.md
+++ b/2-数学/中国剩余定理.md
@@ -13,7 +13,8 @@ $$
 ll crt(int n, vector<ll> &a, vector<ll> &m) {
     ll ans = 0, M = 1;
     for (int i = 0; i < n; i++) M *= m[i];
-    for (int i = 0; i < n; i++) ans = (ans + a[i] * (M / m[i]) % M * inv(M / m[i], m[i]) % M) % M;
+    for (int i = 0; i < n; i++) 
+        ans = (ans + a[i] * (M / m[i]) % M * inv(M / m[i], m[i]) % M) % M;
     return ans;
 }
 ```
