--- a/2-数学/乘法逆元.md
+++ b/2-数学/乘法逆元.md
@@ -6,7 +6,7 @@
 
 ```cpp
 // qpow();
-inline int inv(int n, int p = mod) { return qpow(n, -1, p); }
+inline int inv(int n, int p = mod) { return qpow(n, p - 2, p); }
 ```
 
 ### 扩展欧几里德
@@ -42,7 +42,7 @@ inline int inv(int n int p = mod) {
 ### 递归
 
 ```cpp
-int inv(int n, int p = mod) { return n == 1 ? 1 : 1ll * inv(p % n, p) * (p - p / n) % p; }
+int inv(int n, int p = mod) { return n == 1 ? 1 : (ll)inv(p % n, p) * (p - p / n) % p; }
 ```
 
 ### 递推
