--- a/2-数学/卡特兰数.md
+++ b/2-数学/卡特兰数.md
@@ -22,6 +22,6 @@ $$
 
 ```c++
 // int C(int n, int m);
-ll Catalan(int n) { return (0ll + C(2 * n, n) - C(2 * n, n - 1) + mod) % mod; }
+ll Catalan(int n) { return ((ll)C(2 * n, n) - C(2 * n, n - 1) + mod) % mod; }
 ```
 
