--- a/2-数学/快速幂模 & 快速乘模.md
+++ b/2-数学/快速幂模 & 快速乘模.md
@@ -20,16 +20,6 @@ ll qmul(ll a, ll b, ll mod = mod) {
 }
 ```
 
-### 质数优化
-
-```c++
-// qpow()
-inline ll primepow(ll a, ll b, ll mod = mod) { // P is a prime
-    if ((b %= mod - 1) < 0) b += mod - 1;  // phi(P) = P - 1, assume P is a prime number
-    return qpow(a, b, mod);
-}
-```
-
 ### 广义欧拉降幂
 
 ```c++
@@ -149,7 +139,8 @@ public:
             tmp[cnt++] = m;
         for (u64 res = 2; res <= phi; ++res) {
             bool flag = true;
-            for (u32 i = 0; i != cnt && flag; ++i) flag &= pow_mod(res, phi / tmp[i]) != 1;
+            for (u32 i = 0; i != cnt && flag; ++i) 
+                flag &= pow_mod(res, phi / tmp[i]) != 1;
             if (flag)
                 return res;
         }
@@ -167,7 +158,8 @@ public:
     }
     explicit constexpr operator u32() const { return get(); }
     explicit constexpr operator i32() const { return i32(get()); }
-    constexpr MontgomeryModInt32 &operator=(const MontgomeryModInt32 &rhs) { return v = rhs.v, *this; }
+    constexpr MontgomeryModInt32 &operator=(const MontgomeryModInt32 &rhs) { 
+        return v = rhs.v, *this; }
     constexpr MontgomeryModInt32 operator-() const {
         MontgomeryModInt32 res;
         return res.v = (P << 1 & -(v != 0)) - v, res;
@@ -187,16 +179,20 @@ public:
     constexpr MontgomeryModInt32 &operator/=(const MontgomeryModInt32 &rhs) {
         return this->operator*=(rhs.inv());
     }
-    friend MontgomeryModInt32 operator+(const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
+    friend MontgomeryModInt32 operator+(
+        const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
         return MontgomeryModInt32(lhs) += rhs;
     }
-    friend MontgomeryModInt32 operator-(const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
+    friend MontgomeryModInt32 operator-(
+        const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
         return MontgomeryModInt32(lhs) -= rhs;
     }
-    friend MontgomeryModInt32 operator*(const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
+    friend MontgomeryModInt32 operator*(
+        const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
         return MontgomeryModInt32(lhs) *= rhs;
     }
-    friend MontgomeryModInt32 operator/(const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
+    friend MontgomeryModInt32 operator/(
+        const MontgomeryModInt32 &lhs, const MontgomeryModInt32 &rhs) {
         return MontgomeryModInt32(lhs) /= rhs;
     }
     friend std::istream &operator>>(std::istream &is, MontgomeryModInt32 &rhs) {
@@ -217,7 +213,8 @@ public:
 };
 ```
 
-杜老师板子
+#### 杜老师板子
+
 ```c++
 typedef unsigned long long u64;
 typedef __int128_t i128;
@@ -265,7 +262,7 @@ int main() {
 }
 ```
 
-min_25
+#### min_25
 
 ```c++
 #include <cstdio>
