--- a/2-数学/阶乘.md
+++ b/2-数学/阶乘.md
@@ -29,7 +29,9 @@ void init_inv(int n = N, int mod = mod) {
 }
 void init_fac(int n = N, int mod = mod) {
     _fac[0] = _invfac[0] = 1;
-    for (int i = 1; i < n; i++) _fac[i] = _fac[i - 1] * i % mod, _invfac[i] = _invfac[i - 1] * _inv[i] % mod;
+    for (int i = 1; i < n; i++) 
+        _fac[i] = _fac[i - 1] * i % mod, 
+        _invfac[i] = _invfac[i - 1] * _inv[i] % mod;
 }
 inline int inv(int n) { return _inv[n]; }
 inline int fac(int n) { return _fac[n]; }
