--- a/3-数据结构/并查集.md
+++ b/3-数据结构/并查集.md
@@ -6,25 +6,25 @@
 ### 路径压缩 / 启发式合并
 ```cpp
 struct UnionFindSet {
-    vector<ll> f, num, rank;
-    ll n;
+    vector<int> f, num, rank;
+    int n;
 
-    UnionFindSet(ll n) : f(n), num(n), rank(n) { clear(n); }
-    void clear(ll n) {
+    UnionFindSet(int n) : f(n), num(n), rank(n) { clear(n); }
+    void clear(int n) {
         this->n = n;
-        for (ll i = 0; i < n; i++) {
+        for (int i = 0; i < n; i++) {
             f[i] = i;
             num[i] = rank[i] = 1;
         }
     }
 
-    ll find(ll x) { return f[x] == x ? x : f[x] = find(f[x]); }
+    int find(int x) { return f[x] == x ? x : f[x] = find(f[x]); }
 
-    void Union(ll x, ll y) { f[find(y)] = find(x); }
+    void Union(int x, int y) { f[find(y)] = find(x); }
 
-    ll find(ll x) { return f[x] == x ? x : find(f[x]); } // 不路径压缩
+    int find(int x) { return f[x] == x ? x : find(f[x]); } // 不路径压缩
 
-    void Union(ll x, ll y) { // 按深度合并
+    void Union(int x, int y) { // 按深度合并
         x=find(x), y=find(y);
         if(x == y) return;
         if (rank[x] > rank[y]) {
