--- a/7-其他/快读.md
+++ b/7-其他/快读.md
@@ -1,28 +1,44 @@
 ## 快读
 
+### 较短
+
 ```c++
 #pragma GCC optimize("Ofast")
 
 const int SIZE = (1 << 21) - 1;
 char ibuf[SIZE], *is, *it, c;
 
-#define gc() (is == it ? (it = (is = ibuf) + fread(ibuf, 1, SIZE, stdin), (is == it ? EOF : *is++)) : *is++)
+#define gc() (is==it?(it=(is=ibuf)+fread(ibuf,1,SIZE,stdin),\
+        (is==it?EOF:*is++)):*is++)
 
-template<class T>
-void read(T &x){
-    x = 0; char ch = 0;
-    while(ch<'0'||ch>'9')ch=gc();
-    while(ch>='0'&&ch<='9')x=x*10+ch-'0',ch=gc();
+template <class T>
+inline int scan(T &x){
+    x=0;bool f=0;char ch=gc();
+    if(ch==EOF)return ch;
+    while(!isdigit(ch)){if(ch=='-')f=1;ch=gc();}
+    while(isdigit(ch))x=x*10+ch-'0',ch=gc();
+	if(f)x=-x;return 1;
 }
 
-template <typename T>
-inline void fprint(T x) {
-    if(x<0)putchar(45),x=-x;
-    if(x>9)fprint(x/10);
-    putchar(x%10+48);
+template <class T>
+inline void print(T x) {
+    if(x<0)putchar('-'),x=-x;
+    if(x>9)print(x/10);
+    putchar(x%10+'0');
 }
 ```
 
+### 较长
+
+用法：把这段代码复制到你的代码前面，然后用cin/cout正常写，就会变成快读、快输了。
+
+特别说明：
+
+- 目前不支持小数类（`double`,`long double`,`float`），不支持C++的 `std :: string`（但是支持`char`数组）。
+- 支持 `__int128`。
+- 请不要用在交互题中。
+
+来源：https://www.cnblogs.com/dysyn1314/p/13364193.html
 
 ```c++
 /* -------- fast io -------- */ // begin
@@ -109,4 +125,44 @@ struct writer{
 #define cout Fastio::cout
 #define endl Fastio::endl
 /* -------- fast io -------- */ // end
+```
+
+### Java
+
+```c++
+import java.io.*;
+
+public class Main {
+	public static StreamTokenizer in = new StreamTokenizer(
+		new BufferedReader(new InputStreamReader(System.in),32768));
+	public static PrintWriter out = new PrintWriter(
+		new OutputStreamWriter(System.out));
+
+	public static double nextDouble() throws IOException{ 
+		in.nextToken(); return in.nval; }
+	public static float nextFloat() throws IOException{ 
+		in.nextToken(); return (float)in.nval; }
+	public static int nextInt() throws IOException{ 
+		in.nextToken(); return (int)in.nval; }
+	public static String next() throws IOException{ 
+		in.nextToken(); return in.sval;}
+
+	public static void main(String[] args) throws IOException{
+//		获取输入
+		while(in.nextToken()!=StreamTokenizer.TT_EOF){
+			break;
+		}
+		int x = (int)in.nextToken();  //第一个数据应当通过nextToken()获取
+		
+		int y = nextInt();
+		float f = nextFloat();
+		double d = nextDouble();
+		String str = next();
+
+//		输出
+		out.println("abc");
+		out.flush();
+		out.close();
+	}
+}
 ```
