--- a/2-数学/分解质因数.md
+++ b/2-数学/分解质因数.md
@@ -2,19 +2,30 @@
 
 ### 埃氏筛
 
+- 预处理：$O(n \log \log n)$ 
+- 查询：$O(\log n)$
+
 ```c++
 void prime_factorize(int x) {
     while (x > 1) {
+        if (!gpd[x]) break;
         int p = gpd[x];
         int cnt = 0;
         while (x % p == 0)
             x /= p, cnt++;
-        // store or process with p, cnt...
+        // store or process with p, cnt, p ^ cnt...
+    }
+    if (x > 1) {
+        int p = x, cnt = 1;
+        // store or precess with p, cnt, p ^ cnt...
     }
 }
 ```
 
 ### 欧拉筛
+
+- 预处理：$O(n)$ 
+- 查询：$O(\sqrt{\frac{n}{\ln n}})$
 
 ```c++
 // calculate prime divisors in x
