--- a/2-数学/筛法.md
+++ b/2-数学/筛法.md
@@ -7,7 +7,7 @@ array<int, N> gpd;
 void Eratosthenes(int n) {
     for (int i = 2; i < n; i++)
         if (!gpd[i])
-            for (int j = i; j < n; j += i)
+            for (int j = i; j < N; j += i)
                 gpd[j] = i;
 }
 ```
