--- a/4-图论/最短路.md
+++ b/4-图论/最短路.md
@@ -30,7 +30,33 @@ Shortest Path Faster Algorithm, Bellman-Ford 的队列实现
 引用网上资料，SLF 可使速度提高 15 ~ 20%；SLF + LLL 可提高约 50%。
 
 ```c++
-
+int SPFA(vector<vector<edge>> &adj, int s, vector<int> &dis, int n) {
+    dis[s] = 0;
+    queue<int> q;
+    vector<int> inq(adj.size());
+    vector<int> relax_cnt(adj.size());
+    q.push(s);
+    inq[s] = 1;
+    while (q.size()) {
+        int u = q.front();
+        q.pop();
+        inq[u] = 0;
+        for (auto &e : adj[u]) {
+            auto &v = e.v;
+            auto &w = e.w;
+            if (dis[v] > dis[u] + w) {
+                dis[v] = dis[u] + w;
+                relax_cnt[v]++;
+                if (relax_cnt[v] >= n) return -1; // fail  
+                if (!inq[v]) {
+                    q.push(v);
+                    inq[v] = 1;
+                }
+            }
+        }        
+    }
+    return 0;
+}
 ```
 
 ## Dijkstra
@@ -47,22 +73,21 @@ Shortest Path Faster Algorithm, Bellman-Ford 的队列实现
 priority_queue:
 
 ```c++
-void Dijkstra(Graph &g, int s, vector<ll> &d) {
-    d[s] = 0;
+void Dijkstra(vector<vector<edge>> adj, int s, vector<int> &dis) {
+    dis[s] = 0;
     priority_queue<pii> q;
-    q.emplace_back(-d[s], s);
+    q.push({-dis[s], s});
     while (q.size()) {
-        int u = q.top().second;
-        int d_u = q.top().first;
+        auto [dis_u, u] = q.top();
+        dis_u = -dis_u;
         q.pop();
-        if (d_u != d[u]) continue;  // important 
-        vis[u] = 1;
-        for (Edge e : g[u]) {
-            int v = e.v;
+        if (dis_u != dis[u]) continue;  // important 
+        for (auto &e : adj[u]) {
+            auto v = e.v;
             auto w = e.w;
-            if (d[v] > d[u] + w) {
-                d[v] = d[u] + w;
-                q.emplace_back(-d[v], v);
+            if (dis[v] > dis[u] + w) {
+                dis[v] = dis[u] + w;
+                q.push({-dis[v], v});
             }
         }
     }
@@ -75,7 +100,88 @@ void Dijkstra(Graph &g, int s, vector<ll> &d) {
 
 全源最坏 O(NM + NMlogM) = O(NMlogM) (1 次 Bellman-Ford + N 次 Dijkstra),优于 N 次 Bellman-Ford O(N^2M)，在稀疏图上优于 Floyd O(N^3)
 
-超级源点 -> Bellman-Ford 求 `h[i]` -> `w <- w + h[u] - h[v]` -> n 轮 Dijkstra 
+超级源点 -> Bellman-Ford/SPFA 求 `h[i]` -> `w <- w + h[u] - h[v]` -> n 轮 Dijkstra -> `dis[u][v] <- dis[u][v] - h[u] + h[v]`
+
+```c++
+int SPFA(vector<vector<edge>> &adj, int s, vector<int> &dis, int n) {
+    dis[s] = 0;
+    queue<int> q;
+    vector<int> inq(adj.size());
+    vector<int> relax_cnt(adj.size());
+    q.push(s);
+    inq[s] = 1;
+    while (q.size()) {
+        int u = q.front();
+        q.pop();
+        inq[u] = 0;
+        for (auto &e : adj[u]) {
+            auto &v = e.v;
+            auto &w = e.w;
+            if (dis[v] > dis[u] + w) {
+                dis[v] = dis[u] + w;
+                relax_cnt[v]++;
+                if (relax_cnt[v] >= n) return -1; // fail  
+                if (!inq[v]) {
+                    q.push(v);
+                    inq[v] = 1;
+                }
+            }
+        }        
+    }
+    return 0;
+}
+
+void Dijkstra(vector<vector<edge>> adj, int s, vector<int> &dis) {
+    dis[s] = 0;
+    priority_queue<pii> q;
+    q.push({-dis[s], s});
+    while (q.size()) {
+        auto [dis_u, u] = q.top();
+        dis_u = -dis_u;
+        q.pop();
+        if (dis_u != dis[u]) continue;  // important 
+        for (auto &e : adj[u]) {
+            auto v = e.v;
+            auto w = e.w;
+            if (dis[v] > dis[u] + w) {
+                dis[v] = dis[u] + w;
+                q.push({-dis[v], v});
+            }
+        }
+    }
+}
+
+int Johnson(vector<vector<edge>> &adj, vector<vector<int>> &dis, int S) {
+    for (int i = 0; i < (int)adj.size(); i++) 
+        if (i != S) 
+            adj[S].push_back({i, 0});
+
+    vector<int> h(adj.size(), INF);
+    vector<int> relax_cnt(adj.size());
+    int res = SPFA(adj, S, h, adj.size() * 2);
+    if (res == -1) return -1; // fail 
+
+    vector<vector<edge>> new_adj(adj.size());
+    for (int u = 0; u < (int)new_adj.size(); u++) {
+        new_adj[u] = adj[u];
+        for (auto &e : new_adj[u]) {
+            auto &v = e.v;
+            auto &w = e.w;
+            w = w + h[u] - h[v];
+        }
+    }
+    
+    for (int i = 0; i < adj.size(); i++) 
+        if (i != S)
+            Dijkstra(new_adj, i, dis[i]);
+
+    for (int i = 0; i < (int)dis.size(); i++)
+        for (int j = 0; j < (int)dis.size(); j++)
+            if (dis[i][j] != INF) dis[i][j] = dis[i][j] - h[i] + h[j];
+
+    return 0;
+}
+```
 
 ## D´Esopo-Pape
 
