--- a/7-其他/快读.md
+++ b/7-其他/快读.md
@@ -1,5 +1,31 @@
 ## 快读
 
+### 红书
+
+```c++
+inline int readint() {
+	char c = getchar();
+	while (!isdigit(c)) c = getchar();
+
+	int x = 0;
+	while(isdigit(c)) {
+		x = x * 10 + c - '0';
+		c = getchar();
+	}
+	return x;
+}
+
+int buf[10];
+inline void writeint(int i) {
+	int p = 0; if (i < 0) putchar('-'), i = -i;
+	if (i == 0) p++; // 特殊情况：i 等于 0 时要输出 0，而不是什么也不输出
+	else while (i) {
+		buf[p++] = i % 10, i /= 10;
+	}
+	for (int j = p - 1; j >= 0; j--) putchar('0' + buf[j]); // 逆序输出
+}
+```
+
 ### 较短
 
 ```c++
@@ -13,10 +39,10 @@ char ibuf[SIZE], *is, *it, c;
 
 template <class T>
 inline int scan(T &x){
-    x=0;bool f=0;char ch=gc();
-    if(ch==EOF)return ch;
-    while(!isdigit(ch)){if(ch=='-')f=1;ch=gc();}
-    while(isdigit(ch))x=x*10+ch-'0',ch=gc();
+    x=0;bool f=0;char c=gc();
+    if(c==EOF)return c;
+    while(!isdigit(c)){if(c=='-')f=1;c=gc();}
+    while(isdigit(c))x=x*10+c-'0',c=gc();
 	if(f)x=-x;return 1;
 }
 
